--- a/gs-maven-module/pom.xml
+++ b/gs-maven-module/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>gs-messaging-rabbitmq</artifactId>
+    <artifactId>gs-maven-module</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
